# StellarRoute

./: CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PR_CHECKLIST.md
.github/workflows/: ci.yml  deploy-testnet.yml
crates/: clean_errors.txt  errors.json  errors.txt  errors2.json  read_errors.py
crates/api/: Cargo.toml
crates/sdk-rust/: Cargo.toml
crates/sdk-rust/src/: client.rs  error.rs  lib.rs  types.rs
crates/sdk-rust/tests/: client_integration.rs
docs/: baseline_report.json  performance_budget.md
docs/api/: error_taxonomy.md  openapi.yaml  routes_endpoint.md
docs/architecture/: PERFORMANCE_NOTES.md
docs/deployment/: README.md
frontend/: eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/__mocks__/: lucide-react.tsx
frontend/app/: layout.tsx  providers.tsx
frontend/components/: DemoSwap.tsx  ErrorBoundary.tsx  Header.tsx
frontend/e2e/: mobile-layout.spec.ts
frontend/hooks/: useApi.ts  useQuote.ts  useQuoteRefresh.test.ts  useQuoteRefresh.ts  useRecentTokens.test.ts  useRecentTokens.ts  useTokenPairUrl.test.ts  useTokenPairUrl.ts  useTradeFormStorage.test.ts  useTradeFormStorage.ts  useWallet.ts
frontend/lib/: formatting.test.ts  formatting.ts  quote-stale.test.ts  quote-stale.ts  slippage.test.ts  slippage.ts  swap-validation.test.ts  swap-validation.ts
frontend/types/: index.ts  settings.ts
scripts/: deploy.sh  measure_and_export.py  upgrade.sh
scripts/lib/: common.sh
sdk-js/: package-lock.json  package.json  tsconfig.build.cjs.json  tsconfig.build.json
(+264 files in other folders)
