[package]
name = "stellarroute-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true

# SDK-specific dependencies
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
insta = "1.41"
